Acceso a thymeleaf arregaldo y controles de acceso a dash boars abierto para pruebas.